# plague-bot-vr

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  LICENSE  README.md  ROADMAP.md  SPEC.md  TODO.md  install_realsense.sh  start_vision.sh
docs/adr/: 0001-arm-urdf-is-standalone.md  0002-wheel-joint-naming-inversion.md  0003-perception-backend-is-pluggable.md  0004-detection-only-aim-not-reach.md
firmware/plaguebot_arm/plaguebot_arm/: CMakeLists.txt  sdkconfig
firmware/plaguebot_arm/plaguebot_arm/main/: CMakeLists.txt  main.c
firmware/plaguebot_base/: CMakeLists.txt  sdkconfig
firmware/plaguebot_base/main/: CMakeLists.txt  main.c
firmware/plaguebot_base_arduino/: plaguebot_base_arduino.ino
src/plaguebot_arm_bridge/: README.md  package.xml  setup.cfg  setup.py
src/plaguebot_arm_bridge/config/: arm_bridge.yaml
src/plaguebot_arm_bridge/launch/: arm_bridge.launch.py
src/plaguebot_arm_bridge/plaguebot_arm_bridge/: bridge_node.py
src/plaguebot_base_description/: CMakeLists.txt  package.xml
src/plaguebot_base_description/config/: base_controllers.yaml
src/plaguebot_base_description/launch/: display.launch.py  gazebo.launch.py
src/plaguebot_base_description/meshes/visual/: CHASIS_PLAGUEBOT.STL
src/plaguebot_base_description/rviz/: base.rviz
src/plaguebot_base_description/urdf/: plaguebot_base.urdf.xacro  plaguebot_base_ros2_control.xacro
src/plaguebot_bringup/: package.xml  setup.cfg  setup.py
src/plaguebot_bringup/config/: ekf.yaml  nav2_params.yaml  slam_params.yaml
src/plaguebot_bringup/launch/: robot_base.launch.py
src/plaguebot_bringup/maps/: greenhouse.pgm  greenhouse.yaml
src/plaguebot_bringup/meshes/visual/: LLANTA.STL  RPLIDAR_C1.STL
src/plaguebot_bringup/plaguebot_bringup/: calibrate_base.py  esp32_bridge.py  serial_sniffer.py
src/plaguebot_bringup/urdf/: plaguebot_base.urdf.xacro
src/plaguebot_controller/: CMakeLists.txt  package.xml
src/plaguebot_controller/config/: plaguebot_controllers.yaml
src/plaguebot_controller/launch/: controller.launch.py
src/plaguebot_description/: CMakeLists.txt  package.xml
src/plaguebot_description/launch/: display.launch.py  gazebo.launch.py
src/plaguebot_description/meshes/: base.STL  base_plate.STL  elbow_1.STL  forearm.STL  upper_arm.STL  wrist_1.STL  wrist_2.STL
src/plaguebot_description/rviz/: display.rviz
src/plaguebot_description/urdf/: plaguebot.urdf.xacro  plaguebot_gazebo.xacro  plaguebot_ros2_control.xacro
src/plaguebot_description/worlds/: plaguebot.sdf
src/plaguebot_firmware/: CMakeLists.txt  package.xml  plaguebot_interface.xml
src/plaguebot_firmware/config/: plaguebot_controllers.yaml
src/plaguebot_firmware/include/plaguebot_firmware/: plaguebot_interface.hpp
src/plaguebot_firmware/launch/: plaguebot_base.launch.py
src/plaguebot_firmware/src/: plaguebot_interface.cpp
src/plaguebot_localization/: CMakeLists.txt  package.xml
src/plaguebot_localization/launch/: localization.launch.py
src/plaguebot_mission/: package.xml  setup.cfg  setup.py
src/plaguebot_mission/launch/: mission.launch.py
src/plaguebot_mission/plaguebot_mission/: dashboard_bridge.py  mission_node.py
src/plaguebot_mission/web/: index.html  map_meta.json
src/plaguebot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/plaguebot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  plaguebot.srdf  ros2_controllers.yaml
src/plaguebot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/plaguebot_msgs/: CMakeLists.txt  package.xml
src/plaguebot_msgs/msg/: Detection.msg  DetectionArray.msg
src/plaguebot_msgs/srv/: Detect.srv
src/plaguebot_nav/: CMakeLists.txt  package.xml
src/plaguebot_nav/config/: nav2_params.yaml
src/plaguebot_nav/launch/: nav.launch.py
src/plaguebot_perception/: package.xml  setup.cfg  setup.py
src/plaguebot_perception/launch/: perception.launch.py
src/plaguebot_perception/plaguebot_perception/: backends.py  perception_node.py
src/plaguebot_py_examples/: package.xml  setup.cfg  setup.py
src/plaguebot_py_examples/plaguebot_py_examples/: simple_parameter.py  simple_service_client.py  simple_service_server.py
src/plaguebot_robot/: CMakeLists.txt  package.xml
src/plaguebot_robot/config/: robot_controllers.yaml
src/plaguebot_robot/launch/: sim.launch.py
src/plaguebot_robot/urdf/: plaguebot_robot.urdf.xacro
src/plaguebot_robot/worlds/: greenhouse.sdf
src/plaguebot_slam/: CMakeLists.txt  package.xml
src/plaguebot_slam/config/: rviz_slam.rviz  slam_params.yaml
src/plaguebot_slam/launch/: slam.launch.py
src/plaguebot_utils/: CMakeLists.txt  package.xml
src/plaguebot_utils/plaguebot_utils/: angle_conversion.py
src/plaguebot_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/plaguebot_vision/launch/: camera.launch.py  hailo_vision_launch.py  lidar_foxglove.launch.py  plaguebot.launch.py  realsense_launch.py  webrtc_vision_launch.py
src/plaguebot_vision/scripts/: camera_kiyo.py  camera_node.py  camera_realsense.py  camera_webcam.py  hailo_detector.py  hailo_smoke_test.py  vision_dashboard.py  webrtc_server.py
src/plaguebot_vision/systemd/: plaguebot-vision.service
src/plaguebot_vision/web/: index.html  main.js  style.css
unity/PlagueBotClient/: README.md
unity/PlagueBotClient/Assets/Scripts/PlagueBot/: PlagueBotWebRTCClient.cs  WebSocketClient.cs
