<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plaguebot_firmware</name>
  <version>0.1.0</version>
  <description>Hardware interface for Plague-Bot VR mobile base</description>
  <maintainer email="orlando@todo.com">Orlando Camacho</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <build_depend>libserial-dev</build_depend>
  <exec_depend>libserial-dev</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
