<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plaguebot_nav</name>
  <version>0.1.0</version>
  <description>Nav2 navigation (AMCL + planner + MPPI controller) for Plague-Bot in the greenhouse</description>
  <maintainer email="orlandocamc@gmail.com">Orlando</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>plaguebot_robot</exec_depend>
  <exec_depend>plaguebot_localization</exec_depend>
  <exec_depend>plaguebot_slam</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
