<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plaguebot_robot</name>
  <version>0.1.0</version>
  <description>Unified robot description (mobile base + PROTON arm), greenhouse simulation world, and simulation launch for Plague-Bot VR.</description>
  <maintainer email="orlandocamc@gmail.com">Orlando</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>plaguebot_base_description</depend>
  <depend>plaguebot_description</depend>
  <depend>plaguebot_moveit</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>xacro</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
